<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/list_light_gray">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/owner_lock_title"
            android:id="@+id/textView" android:layout_gravity="left|center_vertical"
            android:background="@color/list_dark_gray" android:padding="10dp" android:textColor="@color/gray"/>
    <View android:background="@color/white" android:layout_height="2dp" android:layout_width="match_parent"/>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_margin="10dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/owner_lock_prompt"
                android:id="@+id/textView2" android:layout_gravity="center_vertical" android:layout_marginRight="10dp"
                android:textColor="@color/list_dark_gray" android:layout_marginLeft="10dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/owner_lock_edit_text"
                android:layout_gravity="center"
                android:hint="@string/owner_lock_hint"
                android:inputType="textPassword"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="10dp">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_owner_passcode_button_label"
                android:id="@+id/neutral_button" android:layout_weight="1" android:background="@drawable/custom_dialog_button_background"
                android:padding="10dp"/>
    </LinearLayout>
    <View android:background="@color/white" android:layout_height="2dp" android:layout_width="match_parent"/>

</LinearLayout>