<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="5dp">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="vertical"
            android:layout_weight="1">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serial_number_label"
                android:id="@+id/textView_serial"
                android:layout_gravity="top"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number_label"
                android:id="@+id/textView_phone"
                android:layout_gravity="top"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inform_number_list_label"
                android:id="@+id/textView_inform"/>

    </LinearLayout>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delete_record"
            android:src="@android:drawable/ic_delete"
            android:background="@android:color/transparent"
            android:layout_gravity="center_vertical|left"
            android:layout_marginRight="5dp"/>

</LinearLayout>