<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:background="@color/list_dark_gray"
              android:orientation="vertical">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/list_light_gray"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/sim_information_header"
                    android:id="@+id/textView2"
                    android:layout_gravity="center_vertical|left"
                    android:layout_weight="1" android:textColor="@color/white"/>

            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_sim_info"
                    android:layout_gravity="right|top"
                    android:src="@android:drawable/ic_menu_edit"
                    android:background="@android:color/transparent"/>
        </LinearLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textView_phone"
                android:layout_marginBottom="10dp" android:textColor="@color/white"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textView_serial"
                android:layout_marginBottom="10dp" android:textColor="@color/white"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sim_tag"
                android:id="@+id/textView_sim_tag_" android:layout_marginBottom="10dp" android:textColor="@color/white"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sim_type"
                android:id="@+id/textView_sim_type" android:layout_marginBottom="10dp" android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp" android:layout_marginLeft="10dp">

    </LinearLayout>
    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_edittext_label"
                    android:id="@+id/textView"
                    android:layout_gravity="center_vertical" android:textColor="@color/white"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/editText_inform_phone"
                    android:layout_gravity="center_vertical|left"
                    android:layout_weight="1"
                    android:hint="@string/hint_emergency_phone"
                    android:layout_marginLeft="5dp"/>
        </TableRow>
    </TableLayout>

</LinearLayout>
